# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polarspulse"
version = "0.1.0" # Should match __version__ in __init__.py
authors = [
  { name="ark4dev", email="akram.alyass@example.com" }, 
]
description = "Fast, insightful data profiling for Polars DataFrames."
readme = "README.md"
license = { file="LICENSE" } 
requires-python = ">=3.8" # Polars dependency requirement
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE", 
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# Specify required dependencies
dependencies = [
    "polars>=1.26.0", # Use a recent stable version or adjust as needed
]
# Optional dependencies (e.g., for development, testing)
# [project.optional-dependencies]
# test = ["pytest>=7.0"]

[project.urls]
"Homepage" = "https://github.com/ark4dev/polarspulse" 
"Bug Tracker" = "https://github.com/ark4dev/polarspulse/issues" 